- Removed IController.java - Moved LearningUnitModel.java and LearningUnitController.java and Interfaces to a new package - Added Startscreen functions (WIP)

--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -1,5 +1,7 @@
 chapter=Chapter
 closeButton=EXIT (TEMPORARY)
+nameColumn=Name
 nextButton=Next
+pathColumn=Path
 scrollDownButton=To Bottom
 title=Learningunit
