--- a/src/main/resources/localization/Lang_de_DE.properties
+++ b/src/main/resources/localization/Lang_de_DE.properties
@@ -1,5 +1,7 @@
 chapter=Kapitel
 closeButton=BEENDEN (TEMPORÄR)
+nameColumn=Name
 nextButton=Weiter
+pathColumn=Pfad
 scrollDownButton=Nach Unten
 title=Lerneinheit
