- Added Translations for HTML Control Buttons

--- a/src/main/resources/localization/Lang_de_DE.properties
+++ b/src/main/resources/localization/Lang_de_DE.properties
@@ -2,6 +2,10 @@ chapter=Kapitel
 closeButton=BEENDEN (TEMPORÄR)
 nameColumn=Name
 nextButton=Weiter
+openLearningUnit=Öffnen
 pathColumn=Pfad
+preamble-button=Verstanden
+readOutButton=Vorlesen
+saveButton=Speichern
 scrollDownButton=Nach Unten
 title=Lerneinheit
