--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -2,6 +2,10 @@ chapter=Chapter
 closeButton=EXIT (TEMPORARY)
 nameColumn=Name
 nextButton=Next
+openLearningUnit=Open
 pathColumn=Path
+preamble-button=Understood
+readOutButton=Read out
+saveButton=Save
 scrollDownButton=To Bottom
 title=Learningunit
