--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -8,5 +8,5 @@ pathColumn=Path
 preamble-button=Understood
 readOutButton=Read out
 saveButton=Save
-scrollDownButton=To Bottom
+scrollDownButton=Down
 title=Learningunit
