- Added Settings Scene - Functioniality WIP

--- a/src/main/resources/localization/Lang_de_DE.properties
+++ b/src/main/resources/localization/Lang_de_DE.properties
@@ -1,9 +1,11 @@
 changeLanguageButton=Wechseln zu: Englisch
 chapter=Kapitel
 closeButton=BEENDEN (TEMPORÄR)
+language=Sprache
 nameColumn=Name
 nextButton=Weiter
 openLearningUnit=Öffnen
+openStartScreenButton=Zurück zur Auswahl
 pathColumn=Pfad
 preamble-button=Verstanden
 readOutButton=Vorlesen
