--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -1,9 +1,11 @@
 changeLanguageButton=Change to: Deutsch
 chapter=Chapter
 closeButton=EXIT (TEMPORARY)
+language=Language
 nameColumn=Name
 nextButton=Next
 openLearningUnit=Open
+openStartScreenButton=Back to Selection
 pathColumn=Path
 preamble-button=Understood
 readOutButton=Read out
