- Can now Change Language in Settings

--- a/src/main/resources/localization/Lang_de_DE.properties
+++ b/src/main/resources/localization/Lang_de_DE.properties
@@ -1,10 +1,10 @@
-changeLanguageButton=Wechseln zu: Englisch
 chapter=Kapitel
 closeButton=BEENDEN (TEMPORÄR)
 language=Sprache
 nameColumn=Name
 nextButton=Weiter
 openLearningUnit=Öffnen
+openSettingsButton=Einstellungen
 openStartScreenButton=Zurück zur Auswahl
 pathColumn=Pfad
 preamble-button=Verstanden
