--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -1,10 +1,10 @@
-changeLanguageButton=Change to: Deutsch
 chapter=Chapter
 closeButton=EXIT (TEMPORARY)
 language=Language
 nameColumn=Name
 nextButton=Next
 openLearningUnit=Open
+openSettingsButton=Settings
 openStartScreenButton=Back to Selection
 pathColumn=Path
 preamble-button=Understood
