Can now Change FXML Theme Color

--- a/src/main/resources/localization/Lang_de_DE.properties
+++ b/src/main/resources/localization/Lang_de_DE.properties
@@ -11,4 +11,7 @@ preamble-button=Verstanden
 readOutButton=Vorlesen
 saveButton=Speichern
 scrollDownButton=Nach Unten
+selectionTitle=Auswahl
+settingsTitle=Einstellungen
+themeLabel=Farbthema
 title=Lerneinheit
