--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -11,4 +11,7 @@ preamble-button=Understood
 readOutButton=Read out
 saveButton=Save
 scrollDownButton=Down
+selectionTitle=Selection
+settingsTitle=Settings
+themeLabel=Colortheme
 title=Learningunit
