- Can now Create new Entries in TableView

--- a/src/main/resources/localization/Lang_de_DE.properties
+++ b/src/main/resources/localization/Lang_de_DE.properties
@@ -1,7 +1,11 @@
 chapter=Kapitel
 closeButton=BEENDEN (TEMPORÄR)
+editOrDeleteEntryButton=Editieren
 language=Sprache
 nameColumn=Name
+newEntryButton=Neu
+newEntryErrorEmptyContent=Die Felder dürfen nicht leer sein!
+newEntryErrorEmptyHeader=Fehler beim Hinzufügen des Eintrags
 nextButton=Weiter
 openLearningUnit=Öffnen
 openSettingsButton=Einstellungen
