--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -1,7 +1,11 @@
 chapter=Chapter
 closeButton=EXIT (TEMPORARY)
+editOrDeleteEntryButton=Edit
 language=Language
 nameColumn=Name
+newEntryButton=New
+newEntryErrorEmptyContent=The Fields may not be empty!
+newEntryErrorEmptyHeader=Error adding the Entry
 nextButton=Next
 openLearningUnit=Open
 openSettingsButton=Settings
