- Can now Edit or Delete Entries

--- a/src/main/resources/localization/Lang_de_DE.properties
+++ b/src/main/resources/localization/Lang_de_DE.properties
@@ -1,5 +1,6 @@
 chapter=Kapitel
 closeButton=BEENDEN (TEMPORÄR)
+deleteButton=Löschen
 editOrDeleteEntryButton=Editieren
 language=Sprache
 nameColumn=Name
