--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -1,5 +1,6 @@
 chapter=Chapter
 closeButton=EXIT (TEMPORARY)
+deleteButton=Delete
 editOrDeleteEntryButton=Edit
 language=Language
 nameColumn=Name
