Localization Demo-Video Button

--- a/src/main/resources/localization/Lang_de_DE.properties
+++ b/src/main/resources/localization/Lang_de_DE.properties
@@ -1,6 +1,7 @@
 chapter=Kapitel
 closeButton=BEENDEN (TEMPORÄR)
 deleteButton=Löschen
+demoVideoButton=Demo-Video
 editOrDeleteEntryButton=Editieren
 language=Sprache
 nameColumn=Name
