--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -1,6 +1,7 @@
 chapter=Chapter
 closeButton=EXIT (TEMPORARY)
 deleteButton=Delete
+demoVideoButton=Demo-Video
 editOrDeleteEntryButton=Edit
 language=Language
 nameColumn=Name
