You can now set the Level of Log in the Settings!

--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -3,6 +3,10 @@ closeButton=EXIT (TEMPORARY)
 deleteButton=Delete
 editOrDeleteEntryButton=Edit
 language=Language
+loglevelExplanation0=Shows all information, error and initialization messages
+loglevelExplanation1=Shows all information and error messages
+loglevelExplanation2=Shows all information messages
+loglevelLabel=Loglevel
 nameColumn=Name
 newEntryButton=New
 newEntryErrorEmptyContent=The Fields may not be empty!
