--- a/src/main/resources/localization/Lang_de_DE.properties
+++ b/src/main/resources/localization/Lang_de_DE.properties
@@ -1,5 +1,5 @@
 chapter=Kapitel
-closeButton=BEENDEN (TEMPORÄR)
+closeButton=Zurück
 deleteButton=Löschen
 demoVideoButton=Demo-Video
 editOrDeleteEntryButton=Editieren
