--- a/src/main/resources/localization/Lang_en_US.properties
+++ b/src/main/resources/localization/Lang_en_US.properties
@@ -1,5 +1,5 @@
 chapter=Chapter
-closeButton=EXIT (TEMPORARY)
+closeButton=Exit
 deleteButton=Delete
 demoVideoButton=Demo-Video
 editOrDeleteEntryButton=Edit
